[gd_scene load_steps=9 format=3 uid="uid://d3t62bxcdnwj"]

[ext_resource type="Script" path="res://Scripts/pipe_pair.gd" id="1_ve4t3"]
[ext_resource type="Texture2D" uid="uid://bv3n3rcmipkgo" path="res://Assets/pipe-night.png" id="2_jrsq3"]
[ext_resource type="AudioStream" uid="uid://dgdequ5tpvxf1" path="res://Assets/sound/sfx_die.wav" id="3_n7eur"]
[ext_resource type="AudioStream" uid="uid://c04w3hcuj6kj6" path="res://Assets/sound/sfx_point.wav" id="3_pvbe7"]
[ext_resource type="AudioStream" uid="uid://jyj4jut5v0by" path="res://Assets/sound/sfx_hit.wav" id="3_tixgp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjuro"]
size = Vector2(46, 476)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kerov"]
size = Vector2(47, 446)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cady"]
size = Vector2(20, 504)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_ve4t3")

[node name="TopPipe" type="Area2D" parent="."]
position = Vector2(0, -300)
rotation = -3.14159

[node name="TopPipeSrpite" type="Sprite2D" parent="TopPipe"]
texture = ExtResource("2_jrsq3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(-4.3714e-08, -1)
shape = SubResource("RectangleShape2D_fjuro")

[node name="hit" type="AudioStreamPlayer" parent="TopPipe"]
stream = ExtResource("3_tixgp")

[node name="die" type="AudioStreamPlayer" parent="TopPipe"]
stream = ExtResource("3_n7eur")
volume_db = 2.537

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(-2.99942, 228)
scale = Vector2(42.4184, -0.0355342)
shape = SubResource("RectangleShape2D_fjuro")

[node name="BottomPipe" type="Area2D" parent="."]

[node name="BottomPipeSprite" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, 300)
texture = ExtResource("2_jrsq3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(-0.5, 284)
shape = SubResource("RectangleShape2D_kerov")

[node name="hit" type="AudioStreamPlayer" parent="BottomPipe"]
stream = ExtResource("3_tixgp")

[node name="die" type="AudioStreamPlayer" parent="BottomPipe"]
stream = ExtResource("3_n7eur")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(38, 0)

[node name="Scored" type="Area2D" parent="."]
position = Vector2(45, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
position = Vector2(-7, 5)
shape = SubResource("RectangleShape2D_1cady")

[node name="PointAudio" type="AudioStreamPlayer" parent="Scored"]
stream = ExtResource("3_pvbe7")

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Scored" to="." method="_on_scored_body_entered"]
